Add support rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,16 @@
 {port_specs, [
         {"priv/fdlink", ["c_src/fdlink.c"]}
 ]}.
+
+{plugins, [pc]}.
+
+{provider_hooks,
+ [
+  {pre,
+   [
+    {compile, {pc, compile}},
+    {clean, {pc, clean}}
+   ]
+  }
+ ]
+}.
